# dontsleep

./: Cargo.toml  reset_idle_time.c  test.py
src/: caffeinate.rs  lib.rs  main.rs
