[package]
name = "slacker"
version = "0.1.0"
authors = ["Siddharth Doshi <siddharth.doshi@freighthub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4"
tokio = { version = "1", features = ["full"] }