[package]
name = "slacker"
version = "0.1.0"
authors = ["Siddharth Doshi <siddharth.doshi@freighthub.com>"]
edition = "2018"

[lib]
name = "slacker"

[[bin]]
name = "slacker"

[dependencies]
core-graphics = "0.22.0"
tokio = { version = "1", features = ["full"] }
ctrlc = { version = "3", features = ["termination"] }